refactor: Return result from render method in EdgeVertexTileRenderer
It is considered an anti-pattern to change an argument passed into a method.
This also break encapsulation.